--- a/sass/utilities/_spacing.sass
+++ b/sass/utilities/_spacing.sass
@@ -38,67 +38,67 @@
       padding-inline: $size-value
 
   @include max-screen(medium)
-    .m-md
-      &-#{$size-name}
+    .m
+      &-md-#{$size-name}
         margin: $size-value
-      &t-#{$size-name}
+      &t-md-#{$size-name}
         margin-block-start: $size-value
-      &b-#{$size-name}
+      &b-md-#{$size-name}
         margin-block-end: $size-value
-      &y-#{$size-name}
+      &y-md-#{$size-name}
         margin-block: $size-value
-      &l-#{$size-name}
+      &l-md-#{$size-name}
         margin-inline-start: $size-value
-      &r-#{$size-name}
+      &r-md-#{$size-name}
         margin-inline-end: $size-value
-      &x-#{$size-name}
+      &x-md-#{$size-name}
         margin-inline: $size-value
 
-    .p-md
+    .p
       &-#{$size-name}
         padding: $size-value
-      &t-#{$size-name}
+      &t-md-#{$size-name}
         padding-block-start: $size-value
-      &b-#{$size-name}
+      &b-md-#{$size-name}
         padding-block-end: $size-value
-      &y-#{$size-name}
+      &y-md-#{$size-name}
         padding-block: $size-value
-      &l-#{$size-name}
+      &l-md-#{$size-name}
         padding-inline-start: $size-value
-      &r-#{$size-name}
+      &r-md-#{$size-name}
         padding-inline-end: $size-value
-      &x-#{$size-name}
+      &x-md-#{$size-name}
         padding-inline: $size-value
 
   @include max-screen(small)
-    .m-sm
+    .m
       &-#{$size-name}
         margin: $size-value
-      &t-#{$size-name}
+      &t-sm-#{$size-name}
         margin-block-start: $size-value
-      &b-#{$size-name}
+      &b-sm-#{$size-name}
         margin-block-end: $size-value
-      &y-#{$size-name}
+      &y-sm-#{$size-name}
         margin-block: $size-value
-      &l-#{$size-name}
+      &l-sm-#{$size-name}
         margin-inline-start: $size-value
-      &r-#{$size-name}
+      &r-sm-#{$size-name}
         margin-inline-end: $size-value
-      &x-#{$size-name}
+      &x-sm-#{$size-name}
         margin-inline: $size-value
 
-    .p-sm
+    .p
       &-#{$size-name}
         padding: $size-value
-      &t-#{$size-name}
+      &t-sm-#{$size-name}
         padding-block-start: $size-value
-      &b-#{$size-name}
+      &b-sm-#{$size-name}
         padding-block-end: $size-value
-      &y-#{$size-name}
+      &y-sm-#{$size-name}
         padding-block: $size-value
-      &l-#{$size-name}
+      &l-sm-#{$size-name}
         padding-inline-start: $size-value
-      &r-#{$size-name}
+      &r-sm-#{$size-name}
         padding-inline-end: $size-value
-      &x-#{$size-name}
+      &x-sm-#{$size-name}
         padding-inline: $size-value
